--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
     </section>
     
     <section class="screenshots">
-      <div class="screenshot">Before & After</div>
-      <div class="screenshot">Easy Upload</div>
-      <div class="screenshot">Instant Results</div>
+      <img src="https://women-in-suite.com/old_photo_restore3.jpg" alt="Before & After" class="screenshot" />
+      <img src="https://women-in-suite.com/old_photo_restore3.jpg" alt="Easy Upload" class="screenshot" />
+      <img src="https://women-in-suite.com/old_photo_restore3.jpg" alt="Instant Results" class="screenshot" />
     </section>
     
     <section class="store-badges">
