--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
       <div class="footer-links">
         <a href="privacy.html">Privacy Policy</a>
         <a href="support.html">Support</a>
+        <a href="terms.html">Terms of Use</a>
       </div>
       <div class="copyright">&copy; 2025 Pastella. All rights reserved.</div>
     </div>
