--- a/support.html
+++ b/support.html
@@ -316,17 +316,10 @@
       <div class="contact-section">
         <h2 class="section-title">📧 Contact Us</h2>
         <div class="section-content">
-          <p>Have a specific question or issue? Send us a message and we'll get back to you as soon as possible.</p>
-          <form name="contact" method="POST" data-netlify="true">
-            <input type="hidden" name="form-name" value="contact">
-            <label for="email">Your Email Address</label>
-            <input type="email" id="email" name="email" required placeholder="your@email.com">
-            <label for="subject">Subject</label>
-            <input type="text" id="subject" name="subject" required placeholder="How can we help?">
-            <label for="message">Your Message</label>
-            <textarea id="message" name="message" rows="4" required placeholder="Describe your issue or question..."></textarea>
-            <button type="submit">Send Message</button>
-          </form>
+          <p>Have a specific question or issue? Email us directly and we'll get back to you as soon as possible.</p>
+          <div style="margin-top: 2rem; text-align: center;">
+            <a href="mailto:support@pixobloom.com" style="display: inline-block; background: #fff; color: #44a08d; font-weight: bold; padding: 1rem 2rem; border-radius: 25px; font-size: 1.1rem; text-decoration: none; box-shadow: 0 4px 15px rgba(68, 160, 141, 0.15); border: 2px solid #44a08d; transition: background 0.2s, color 0.2s;">support@pixobloom.com</a>
+          </div>
         </div>
       </div>
       
