--- a/terms.html
+++ b/terms.html
@@ -76,6 +76,7 @@
     <ol>
       <li><strong>Service Description:</strong> Pastella provides AI-powered photo restoration. Upload your old or damaged photos to receive enhanced, colorized, or restored versions.</li>
       <li><strong>Credit System:</strong> Each restoration requires one credit. Credits can be purchased in-app. No subscriptions—pay only for what you use.</li>
+      <li><strong>Credit Expiration:</strong> Purchased credits expire 1 year from the date of purchase. Expired credits cannot be refunded or reinstated.</li>
       <li><strong>Account Requirements:</strong> No account is needed for basic use. To purchase credits, you must sign in with your Apple ID. Your credit balance and purchase history are linked to your Apple account.</li>
       <li><strong>Photo Handling:</strong> Uploaded photos are processed securely and deleted from our servers after restoration. We do not use your photos for any purpose other than providing the restoration service.</li>
       <li><strong>Fair Use:</strong> You agree to use Pastella only for lawful, personal, and non-commercial purposes. Do not upload content you do not own or that violates the rights of others.</li>
